--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
 <title>Page Title</title>
 </head>
 <body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+<img src="./img/city.jpg">
 </body>
 </html>
